@@ -14,14 +14,12 @@
  *  limitations under the License.
  */
 ///usr/bin/env jbang "$0" "$@" ; exit $?
-//JAVA 24
-//JAVAC_OPTIONS --enable-preview -source 24
-//JAVA_OPTIONS --enable-preview
+//JAVA 25
 
 void main(String... args) throws IOException {
     if (args.length != 3) {
-        println("Wrong number of arguments: Provided " + args.length + ", required 3");
-        println("Use version.java <basedir> <patternfly.java.version> <patternfly-version>");
+        IO.println("Wrong number of arguments: Provided " + args.length + ", required 3");
+        IO.println("Use version.java <basedir> <patternfly.java.version> <patternfly-version>");
         System.exit(1);
     }
 
@@ -57,5 +55,5 @@ void main(String... args) throws IOException {
             "");
 
     Files.writeString(javaSource, content, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
-    println("Generated Version.java using " + patternFlyJavaVersion + ", " + patternFlyVersion + ", " + patternFlyMajor);
+    IO.println("Generated Version.java using " + patternFlyJavaVersion + ", " + patternFlyVersion + ", " + patternFlyMajor);
 }
